--- a/algodemo.tex
+++ b/algodemo.tex
@@ -1,10 +1,10 @@
 
 \chapter{Демонстрация работы программы решения теоретико-графовой
   задачи в семантической памяти}
-\label{cha:AlgoDemo}
+\label{cha:algodemo}
 
 \section{Задание}
-\label{sec:AlgoDemo_task}
+\label{sec:algodemo_task}
 
 На этом этапе выполнения расчетной работы вам необходимо будет
 продемонстрировать пошаговое выполнение алгоритма в sc-памяти. Сам
@@ -20,10 +20,10 @@
 
 \section{Волновой алгоритм поиска одного из минимальных путей в
   неориентированном графе}
-\label{sec:AlgoDemo_algo}
+\label{sec:algodemo_algo}
 
 \subsection{Описание алгоритма}
-\label{sec:AlgoDemo_algo_desc}
+\label{sec:algodemo_algo_desc}
 
 Алгоритм поиска одного из минимальных путей в неориентированном графе
 является волновым и основан на понятии волны. В рамках этого алгоритма
@@ -47,7 +47,7 @@
   в формируемую волну, то ее надо исключить из множества непроверенных
   вершин. Созданную волну установить как следующую для новой волны, и
   после этого созданную волну считать новой волной.
-\item Если новая волна пуста, то между вершинами не существует
+v\item Если новая волна пуста, то между вершинами не существует
   пути. Завершить алгоритм.
 \item Если в текущей волне есть конечная вершина, то перейти к пункту
   7, иначе к пункту 4.
@@ -56,10 +56,10 @@
 \end{enumerate}
 
 \subsection{Пример выполнения алгоритма в sc-памяти}
-\label{sec:AlgoDemo_example}
+\label{sec:algodemo_example}
 
 \subsubsection{Соглашения по демонстрации}
-\label{sec:AlgoDemo_demo_conv}
+\label{sec:algodemo_demo_conv}
 
 Перед демонстрацией выполнения алгоритма в sc-памяти нам необходимо
 установить некоторые соглашения по формирование SCg-рисунков.
@@ -112,13 +112,13 @@ sc-конструкция не является корректной в сема
 Пришло время посмотреть, как же работает наш алгоритм в sc-памяти.
 
 \subsubsection{Демонстрация алгоритма}
-\label{sec:AlgoDemo_demo}
+\label{sec:algodemo_demo}
 
 Выполнение алгоритма я продемонстрирую через состояния sc-памяти на
 каждом элементарном этапе решения задачи. Для всех элементарных
 этапов, для которых это возможно, в конце их краткого описания в
 скобках будет указан соответствующий номер шага алгоритма из
-раздела~\ref{sec:AlgoDemo_algo_desc}.
+раздела~\ref{sec:algodemo_algo_desc}.
 
 \newcounter{algosteps}
 
