--- a/cppalgo.tex
+++ b/cppalgo.tex
@@ -1,9 +1,9 @@
 
 \chapter{Разработка программы решения теоретико-графовой задачи}
-\label{cha:Cppalgo}
+\label{cha:cppalgo}
 
 \section{Задание}
-\label{sec:Cppalgo_task}
+\label{sec:cppalgo_task}
 
 При выполнении этого этапа расчетной работы студенту необходимо
 разработать и реализовать программу на С/С++, которая решает выданную
@@ -47,7 +47,7 @@
 \item Нечипуренко, М. И. Алгоритмы и программы решения задач на графах
   и сетях / М.И. Нечипуренко, В.К. Попков, С.М. Майнагашев и др. –
   Новосибирск: Наука. Сиб. отд-ние, 1990. – 515 с.
-\item Емеличев В. А., Мельников О. И., Сарванов В. И., Тышкевич
+v\item Емеличев В. А., Мельников О. И., Сарванов В. И., Тышкевич
   Р. И. Лекции по теории графов. М.: Наука, 1990. 384с. (Изд.2,
   испр. М.: УРСС, 2009. 392 с.)
 \item Касьянов, В. Н. Графы в программировании: обработка,
@@ -130,7 +130,7 @@ New -> Project. В диалоге <<New Project>> вас будет интере
 \end{enumerate}
 
 \subsection{Тестовые примеры}
-\label{sec:Cppalgo_tests}
+\label{sec:cppalgo_tests}
 
 1.  graph1.txt
 
