--- a/scpalgo.tex
+++ b/scpalgo.tex
@@ -2,6 +2,7 @@
 \chapter{Разработка программы решения теоретико-графовой задачи на
   языке программирования, предназначенном для обработки семантических
   сетей}
+\label{cha:scpalgo}
 
 \section{Задание}
 
