дописан раздел про программу с использованием libsc

--- a/cppalgo.tex
+++ b/cppalgo.tex
@@ -168,7 +168,7 @@ New -> Project. В диалоге <<New Project>> вас будет интере
 \end{figure}
 
 \subsection{Создания программы}
-\label{sec:Desc_prg}
+\label{sec:cppprg}
 
 %%% Local Variables: 
 %%% mode: latex
