--- a/oii_intro.tex
+++ b/oii_intro.tex
@@ -1,7 +1,34 @@
 
 
+\phantomsection
+\addcontentsline{toc}{section}{Введение}
+\section*{Введение}
+\label{sec:oii_intro}
+
+Расчетная работа по курсу <<Основы искусственного интеллекта>> состоит
+из следующих этапов:
+
+\begin{itemize}
+\item разработка программы решения теоретико-графовой задачи на языке программирования C++
+  (см. раздел~\ref{cha:cppalgo})
+\item построение фрагмента онтологии теоретико-графовой задачи
+  (см. раздел~\ref{cha:onto})
+\item демонстрация работы программы решения теоретико-графовой задачи
+  в семантической памяти (см. раздел~\ref{cha:algodemo})
+\end{itemize}
+
+Все используемые в этой части материалы, исходные тексты, установочные
+файлы могут быть найдены на кафедральном информационном
+сервере по следующему пути:
+
+{\footnotesize
+\begin{verbatim}
+\\Info\StudInfo\~Методическое обеспечение кафедры\~Учебные курсы\1 курс\ОИИ\Расчётная работа\
+\end{verbatim}
+}
 
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "ai_rr"
 %%% End: 
+
