добавил список литературы

--- a/onto.tex
+++ b/onto.tex
@@ -234,9 +234,8 @@ SCg можно представить так, как показано на
 \section{Формализация понятия <<минимальный путь>>}
 \label{sec:onto_form_min_path}
 
-Если читатель заглянет в книгу Харарри <<Теория графов>> на страницу
-26, то в начале главы <<Маршруты и связность>> он может прочитать
-следующее:
+Если читатель заглянет в \cite{hararigraph} на страницу 26, то в
+начале главы <<Маршруты и связность>> он может прочитать следующее:
 
 \begin{quotation}
   \textbf{Маршрутом} в графе $G$ называется чередующаяся
@@ -355,7 +354,8 @@ SCg можно представить так, как показано на
 самостоятельно, представив маршрут с повторяющимися вершинами и
 ребрами. Поэтому продолжим наш поиск.
 
-Давайте еще раз взглянем на определение маршрута из <<Теории графов>>:
+Давайте еще раз взглянем на определение маршрута из
+\cite{hararigraph}:
 
 \begin{quotation}
   \textbf{Маршрутом} в графе $G$ называется чередующаяся
