--- a/ai_rr.tex
+++ b/ai_rr.tex
@@ -112,7 +112,34 @@
 %\input{scpalgo}
 
 \newpage 
-\bibliography{literature}
+\begin{thebibliography}{99}
+\addcontentsline{toc}{chapter}{Литература}
+
+\bibitem{oregraph} Оре О. Теория графов. -- 2-е изд.. -- М.: Наука,
+  1980. -- С. 336.
+\bibitem{cormengraph} Кормен Т. Х. и др. Часть VI. Алгоритмы для
+  работы с графами // Алгоритмы: построение и анализ = Introduction to
+  Algorithms. -- 2-е изд.. -- М.: Вильямс, 2006. -- С. 1296.
+\bibitem{hararigraph} Харари, Ф. Теория графов / Ф. Харари / Пер. с
+  англ. и предисл. В.П. Козырева. Под ред. Г.П. Гаврилова. Изд. 2-е. --
+  М.: Едиториал УРСС, 2003. -- 269 с.
+\bibitem{nehipurgraph} Нечипуренко, М. И. Алгоритмы и программы
+  решения задач на графах и сетях / М.И. Нечипуренко, В.К. Попков,
+  С.М. Майнагашев и др. -- Новосибирск: Наука. Сиб. отд-ние, 1990. --
+  515 с.
+\bibitem{emelichevgraph} Емеличев В. А., Мельников О. И., Сарванов
+  В. И., Тышкевич Р. И. Лекции по теории графов. М.: Наука,
+  1990. 384с. (Изд.2, испр. М.: УРСС, 2009. 392 с.)
+\bibitem{casianovgraph} Касьянов, В. Н. Графы в программировании:
+  обработка, визуализация и применение / В. Н. Касьянов,
+  В. А. Евстигнеева. -- СПб. : БХВ-Петербург, 2003.
+
+\bibitem{ostisgt} База знаний по теории графов OSTIS GT [Электронный
+  ресурс] / проект OSTIS, 2012. -- Режим доступа:
+  \href{http://ostisgraphstheo.sourceforge.net}{http://ostisgraphstheo.sourceforge.net}. ---
+  Дата доступа : 11.09.2012.
+
+\end{thebibliography}
 
 \end{document}
 
