добавлен rake-скрипт для сборки некоторых целей

--- a/tasks_list.tex
+++ b/tasks_list.tex
@@ -25,7 +25,7 @@
   \item (4) Планарный граф (нг, ог)
   \item (3) Транзитируемый граф (нг)
   \end{enumerate}
-\item Задачи на определение числовых характеристик графа:
+\item Определить числовую характеристику графа:
   \begin{enumerate}[1.]
   \item (2) Радиус (нг, ог, внг, вог)
   \item (2) Диаметр (нг, ог, внг, вог)
@@ -45,7 +45,7 @@
   \item (5) Определить толщину неориентированного графа 
   \item (4) Индекс компонент относительно простой цепи в неориентированном графе 
   \end{enumerate}
-\item Задачи на построение графовых структур:
+\item Построение графа:
   \begin{enumerate}[1.]
   \item (4) Сгенерировать клетку указанного обхвата  
   \item (?) Найти граф, являющийся пересечением множества всех диаметральных цепей неориентированного графа  
@@ -74,7 +74,7 @@
   \item (4) Найти граф конденсации для орграфа 
   \item (4) Найти граф каркасов для неориентированного графа 
   \end{enumerate}
-\item Задачи на поиск в графе:
+\item Поиск в графе:
   \begin{enumerate}[1.]
   \item (2) Определить эксцентриситет каждой вершины в неориентированном графе 
   \item (3) Найти эйлеров цикл в графе (нг, ог)
